fix: overlay component scrollbar

--- a/frontend/app/view/cpuplot/cpuplot.less
+++ b/frontend/app/view/cpuplot/cpuplot.less
@@ -1,24 +1,29 @@
 // Copyright 2024, Command Line Inc.
 // SPDX-License-Identifier: Apache-2.0
 
-.sysinfo-view {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 10px;
+.scrollable {
+    flex-flow: column nowrap;
+    flex-grow: 1;
+    margin-bottom: 0;
     overflow-y: auto;
+    .sysinfo-view {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 10px;
 
-    &.two-columns {
-        grid-template-columns: 1fr 1fr;
-    }
+        &.two-columns {
+            grid-template-columns: 1fr 1fr;
+        }
 
-    .sysinfo-plot-content {
-        svg {
-            [aria-label="tip"] {
-                g {
-                    path {
-                        color: var(--border-color);
+        .sysinfo-plot-content {
+            svg {
+                [aria-label="tip"] {
+                    g {
+                        path {
+                            color: var(--border-color);
+                        }
                     }
                 }
             }
